--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,10 @@
     <string name="buy_1">Buy and Own</string>
     <string name="buy_2">AT $9.99</string>
     <string name="movie">Movie</string>
-    <string name="jogador1">jogador 1</string>
-    <string name="jogador2">jogador 2</string>
+    <string name="jogador1">jogador 1 |X|</string>
+    <string name="jogador2">jogador 2 |o|</string>
+    <string name="venceu">Parabéns !! voçe venceu</string>
+    <string name="deuvelha">deu velha</string>
 
     <!-- Error messages -->
     <string name="error_fragment_message">An error occurred</string>
