--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,20 @@
     <string name="buy_1">Buy and Own</string>
     <string name="buy_2">AT $9.99</string>
     <string name="movie">Movie</string>
-    <string name="jogador1">jogador 1 |X|</string>
-    <string name="jogador2">jogador 2 |o|</string>
+    <string name="jogador1">jogador 1 |%1$s|</string>
+    <string name="jogador2">jogador 2 |%1$s|</string>
     <string name="venceu">Parabéns !! voçe venceu</string>
     <string name="deuvelha">deu velha</string>
+    <string name="tela_inicial">voltar ao inicio</string>
+    <string name="resetar">zera placar</string>
+    <string name="preferences">preferências</string>
+    <string name="escolha">escolha o simbolo</string>
+    <string name="velha">Jogo da Velha App</string>
+
 
     <!-- Error messages -->
     <string name="error_fragment_message">An error occurred</string>
     <string name="dismiss_error">Dismiss</string>
+
 
 </resources>
